add the site favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="./images/icons8-yoga-32.png"
+      type="image/x-icon"
+    />
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -13,6 +19,7 @@
     />
     <!-- css styles -->
     <link rel="stylesheet" href="./styles/main.css" />
+
     <title>YogaTours || Yoga Tour Company</title>
   </head>
   <body>
