adding comments to css and html files so I can see easily where I am up to in the project

--- a/index.html
+++ b/index.html
@@ -24,5 +24,29 @@
   </head>
   <body>
     <h1>hello world</h1>
+    <!-- header  -->
+    <!-- end of header  -->
+
+    <!-- about section -->
+    <!-- end of about section -->
+
+    <!-- services -->
+    <!--end services -->
+
+    <!-- featured tours -->
+    <!-- end of featured tours -->
+
+    <!-- contact -->
+
+    <!-- end of contact -->
+
+    <!-- gallery  -->
+
+    <!-- end of gallery  -->
+
+    <!-- footer -->
+
+    <!-- end of footer -->
+    <!-- scripts -->
   </body>
 </html>
