--- a/index.html
+++ b/index.html
@@ -23,8 +23,21 @@
     <title>YogaTours || Yoga Tour Company</title>
   </head>
   <body>
-    <h1>hello world</h1>
     <!-- header  -->
+    <header id="home">
+      <!-- navbar -->
+      <!-- hero -->
+      <div class="hero">
+        <div class="hero-banner">
+          <h1>continue exploring</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Voluptates, eius repellendus perferendis autem maxime dolor!
+          </p>
+          <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+        </div>
+      </div>
+    </header>
     <!-- end of header  -->
 
     <!-- about section -->
