creates the about html and includes the image file

--- a/index.html
+++ b/index.html
@@ -39,8 +39,39 @@
       </div>
     </header>
     <!-- end of header  -->
-
     <!-- about section -->
+    <section class="section" id="about">
+      <!-- title -->
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <!-- end of title -->
+      <div class="section-center about-center">
+        <!-- about img wrapper -->
+        <article class="about-img">
+          <img
+            src="./images/about.jpg"
+            class="about-photo"
+            alt="woman sat on a beach"
+          />
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsam
+            officiis sequi quo debitis ducimus assumenda consectetur amet
+            officia libero.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsam
+            officiis sequi quo debitis ducimus assumenda consectetur amet
+            officia libero.
+          </p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
