--- a/index.html
+++ b/index.html
@@ -73,8 +73,58 @@
       </div>
     </section>
     <!-- end of about section -->
-
     <!-- services -->
+    <section class="section services" id="services">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center services-center">
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              veritatis perspiciatis, id libero sint maiores!
+            </p>
+          </div>
+        </article>
+        <!-- end of service -->
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-sun fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">yoga holidays</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              veritatis perspiciatis, id libero sint maiores!
+            </p>
+          </div>
+        </article>
+        <!-- end of service -->
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-heart fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">experienced teachers</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              veritatis perspiciatis, id libero sint maiores!
+            </p>
+          </div>
+        </article>
+        <!-- end of service -->
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
