completes the html for the tours section of the website

--- a/index.html
+++ b/index.html
@@ -126,8 +126,113 @@
       </div>
     </section>
     <!--end services -->
-
     <!-- featured tours -->
+    <section class="section" id="featured">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>featured <span>retreats</span></h2>
+      </div>
+      <!-- end of section title -->
+      <!-- featured center -->
+      <div class="section-center featured-center">
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-1.jpg" class="tour-img" alt="" />
+            <p class="tour-date">august 26th, 2024</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <h4>malta adventure</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Doloribus dolorem labore vel exercitationem repellendus dolore
+              ipsam iusto perferendis sed illum.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span> <i class="fas fa-map"> </i>malta </span>
+              </p>
+              <p>6 days</p>
+              <p>from £600</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-2.jpg" class="tour-img" alt="" />
+            <p class="tour-date">may 5th, 2024</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <h4>turkey adventure</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Doloribus dolorem labore vel exercitationem repellendus dolore
+              ipsam iusto perferendis sed illum.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span> <i class="fas fa-map"> </i>side, turkey</span>
+              </p>
+              <p>7 days</p>
+              <p>from £500</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-3.jpg" class="tour-img" alt="" />
+            <p class="tour-date">september 10th, 2024</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <h4>ibiza adventure</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Doloribus dolorem labore vel exercitationem repellendus dolore
+              ipsam iusto perferendis sed illum.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span> <i class="fas fa-map"> </i>ibiza </span>
+              </p>
+              <p>10 days</p>
+              <p>from £1000</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-4.jpg" class="tour-img" alt="" />
+            <p class="tour-date">october 1st, 2024</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <h4>india adventure</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Doloribus dolorem labore vel exercitationem repellendus dolore
+              ipsam iusto perferendis sed illum.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span> <i class="fas fa-map"> </i>goa, india </span>
+              </p>
+              <p>12 days</p>
+              <p>from £1200</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+      </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
