--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- css styles -->
     <link rel="stylesheet" href="./styles/main.css" />
 
-    <title>YogaTours || Yoga Tour Company</title>
+    <title>YogaTours || Yoga Retreat Company</title>
   </head>
   <body>
     <!-- header  -->
@@ -34,7 +34,9 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Voluptates, eius repellendus perferendis autem maxime dolor!
           </p>
-          <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+          <a href="#featured" class="btn hero-btn scroll-link"
+            >explore yoga retreats</a
+          >
         </div>
       </div>
     </header>
@@ -130,7 +132,7 @@
     <section class="section" id="featured">
       <!-- section title -->
       <div class="section-title">
-        <h2>featured <span>retreats</span></h2>
+        <h2>featured <span>yoga retreats</span></h2>
       </div>
       <!-- end of section title -->
       <!-- featured center -->
@@ -232,7 +234,11 @@
         </article>
         <!-- end of single tour -->
       </div>
+      <div class="tour-btn">
+        <a href="#" class="btn">all retreats</a>
+      </div>
     </section>
+
     <!-- end of featured tours -->
 
     <!-- contact -->
