--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <!-- end of single tour -->
       </div>
       <div class="tour-btn">
-        <a href="#" class="btn">all retreats</a>
+        <a href="#" class="btn">all yoga retreats</a>
       </div>
     </section>
 
