changed the word retreat to holiday/s in html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- css styles -->
     <link rel="stylesheet" href="./styles/main.css" />
 
-    <title>YogaTours || Yoga Retreat Company</title>
+    <title>YogaTours || Yoga Holiday Company</title>
   </head>
   <body>
     <!-- header  -->
@@ -35,7 +35,7 @@
             Voluptates, eius repellendus perferendis autem maxime dolor!
           </p>
           <a href="#featured" class="btn hero-btn scroll-link"
-            >explore yoga retreats</a
+            >explore yoga holidays</a
           >
         </div>
       </div>
@@ -132,7 +132,7 @@
     <section class="section" id="featured">
       <!-- section title -->
       <div class="section-title">
-        <h2>featured <span>yoga retreats</span></h2>
+        <h2>featured <span>yoga holidays</span></h2>
       </div>
       <!-- end of section title -->
       <!-- featured center -->
@@ -235,7 +235,7 @@
         <!-- end of single tour -->
       </div>
       <div class="tour-btn">
-        <a href="#" class="btn">all yoga retreats</a>
+        <a href="#" class="btn">all yoga holidays</a>
       </div>
     </section>
     <!-- end of featured tours -->
@@ -245,7 +245,7 @@
       <div class="section-center contact-center">
         <!-- contact title -->
         <article class="contact-title">
-          <h3>want latest yoga retreat info and updates?</h3>
+          <h3>want latest yoga holiday info and updates?</h3>
           <p>Sign up for newsletter and stay up to date</p>
         </article>
         <!-- contact form -->
