--- a/index.html
+++ b/index.html
@@ -337,6 +337,66 @@
     <!-- end of gallery  -->
 
     <!-- footer -->
+    <footer class="section footer">
+      <!-- footer links -->
+      <ul class="footer-links">
+        <!-- single link -->
+        <li><a href="#home" class="footer-link scroll-link">home</a></li>
+        <!-- end of single link -->
+        <!-- single link -->
+        <li><a href="#about" class="footer-link scroll-link">about</a></li>
+        <!-- end of single link -->
+        <!-- single link -->
+        <li>
+          <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <!-- end of single link -->
+        <!-- single link -->
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
+        <!-- end of single link -->
+        <!-- single link -->
+        <li><a href="#gallery" class="footer-link scroll-link">gallery</a></li>
+        <!-- end of single link -->
+      </ul>
+      <!-- end of footer links -->
+      <!-- footer icons -->
+      <ul class="footer-icons">
+        <!-- single icon -->
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <!-- single icon -->
+        <li>
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            class="footer-icon"
+          >
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <!-- end of single icon -->
+        <!-- single icon -->
+        <li>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            class="footer-icon"
+          >
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <!-- end of single icon -->
+      </ul>
+      <!-- end of footer icons -->
+      <p class="copyright-class">
+        copyright &copy; Yoga Tours <span id="date"></span>, all rights reserved
+      </p>
+    </footer>
 
     <!-- end of footer -->
     <!-- scripts -->
