styles the copyright class

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <!-- end of single icon -->
       </ul>
       <!-- end of footer icons -->
-      <p class="copyright-class">
+      <p class="copyright">
         copyright &copy; Yoga Tours <span id="date"></span>, all rights reserved
       </p>
     </footer>
