--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <div class="nav-title">
-              <h1>Yoga <span>Tours</span></h1>
-              <button type="button" class="nav-toggle" id="nav-toggle">
-                <i class="fas fa-bars"></i>
-              </button>
-            </div>
+            <img src="./images/logo.svg" class="nav-logo" alt="" />
+            <button type="button" class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
           </div>
           <!-- end of nav header -->
           <!-- nav links -->
           <ul class="nav-links" id="nav-links">
             <!-- single link -->
-            <li><a href="#home" class="nav-link scroll-link">home</a></li>
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
             <!-- end of single link -->
             <!-- single link -->
-            <li><a href="#about" class="nav-link scroll-link">about</a></li>
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
             <!-- end of single link -->
             <!-- single link -->
             <li>
@@ -72,17 +74,18 @@
                 target="_blank"
                 class="nav-icon"
               >
-                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook"></i>
               </a>
             </li>
+            <!-- end of single icon -->
             <!-- single icon -->
             <li>
               <a
-                href="https://www.facebook.com"
+                href="https://www.twitter.com"
                 target="_blank"
                 class="nav-icon"
               >
-                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
             <!-- end of single icon -->
