--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <img src="./images/logo.svg" class="nav-logo" alt="" />
+            <h2 class="nav-logo">Yoga <span>Tours</span></h2>
+
             <button type="button" class="nav-toggle" id="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
